ffigen/LabSoundHelper.h

int AudioNode_isScheduledNode(int nodeId);
int AudioNode_numberOfInputs(int nodeId);
int AudioNode_numberOfOutputs(int nodeId);
int AudioNode_channelCount(int nodeId);
void AudioNode_reset(int nodeId, AudioContext* context);
char * AudioNode_name(int nodeId);
void releaseNode(int nodeId);
int hasNode(int nodeId);
/// AudioScheduledSourceNode

int AudioScheduledSourceNode_isPlayingOrScheduled(int nodeId);
void AudioScheduledSourceNode_stop(int nodeId, float when);
int AudioScheduledSourceNode_hasFinished(int nodeId);
uint64_t AudioScheduledSourceNode_startWhen(int nodeId);
void AudioScheduledSourceNode_start(int nodeId, float when);
int AudioScheduledSourceNode_playbackState(int nodeId);
////////////////////////
/// SampledAudioNode ///
////////////////////////

int createAudioSampleNode(AudioContext* context);
// setting the bus is an asynchronous operation. getBus returns the most
// recent set request in order that the interface work in a predictable way.
// In the future, setBus and getBus could be deprecated in favor of another
// schedule method that takes a source bus as an argument.
void SampledAudioNode_setBus(int nodeId, AudioContext* context, int busIndex);
// loopCount of -1 will loop forever
// all the schedule routines will call start(0) if necessary, so that a
// schedule is sufficient for this node to start producing a signal.
void SampledAudioNode_schedule(int nodeId, double when);
void SampledAudioNode_schedule2(int nodeId, double when, int loopCount);
void SampledAudioNode_schedule3(int nodeId, double when, double grainOffset, int loopCount);
void SampledAudioNode_schedule4(int nodeId, double when, double grainOffset, double grainDuration, int loopCount);
// this will clear anything playing or pending, without stopping the node itself.
void SampledAudioNode_clearSchedules(int nodeId);
// note: start is not virtual. start on the ScheduledAudioNode is relative,
// but start here is in absolute time.
void SampledAudioNode_start(int nodeId, double when);
void SampledAudioNode_start2(int nodeId, double when, int loopCount);
void SampledAudioNode_start3(int nodeId, double when, double grainOffset, int loopCount);
void SampledAudioNode_start4(int nodeId, double when, double grainOffset, double grainDuration, int loopCount);
// returns the greatest sample index played back by any of the scheduled
// instances in the most recent render quantum. A value less than zero
// indicates nothing's playing.
int SampledAudioNode_getCursor(int index);